--- a/README.adoc
+++ b/README.adoc
@@ -132,7 +132,7 @@ public class UserIt {
    public EntityManagerProvider emProvider = EntityManagerProvider.instance("rules-it");
 
    @Rule
-   public DBUnitRule dbUnitRule = DBUnitRule.instance(emProvider.getConnection());
+   public DBUnitRule dbUnitRule = DBUnitRule.instance(emProvider.connection());
 
    @Test
    @DataSet(value = "datasets/yml/users.yml")
