--- a/README.adoc
+++ b/README.adoc
@@ -381,6 +381,8 @@ escapePattern for each DB without the need to use the escapePattern property in 
 
 IMPORTANT: `@DBUnit` annotation takes precedence over `dbunit.yml` global configuration which will be used only if the annotation is not present.
 
+TIP: `System properties` and `Environment variables` can be used to resolve properties of type *String*. The value of the property must follow the format: `${system property or env var name}`. Check both annotation and global file [example here](https://github.com/database-rider/database-rider/blob/master/rider-core/src/test/java/com/github/database/rider/core/configuration/DBUnitConfigTest.java#L175-L225).
+
 
 === JDBC Connection
 
